@@ -1,4 +1,4 @@
-version = "2.1-pre1"
+version = "2.1-pre2"
 
 if __name__ == "__main__":
     print version
